# imbuia

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  client.rs  commands.rs  config.rs  git.rs  github.rs  input.rs  ipc.rs  keybinds.rs  layout.rs  main.rs  palette.rs  proc.rs  reducer.rs  reducer_tests.rs  render.rs  runtime.rs  session.rs  supervisor.rs  theme.rs  transport.rs  updater.rs
